# Project-Guardian

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  README.md  firebase.json  package-lock.json  package.json  project-roadmap.md  start-dev.bat
.claude/: settings.local.json
ai-services/: README.md  pyproject.toml
ai-services/tests/: test_detector.py
ai-services/whisper/: config.py  detector.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  firebase_init.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: sos_event.py  user.py
backend/app/routers/: health.py  sos.py  users.py
backend/app/services/: firebase_service.py  gemini_service.py  location_service.py  twilio_service.py  whisper_service.py
backend/tests/: conftest.py  test_sos.py  test_twilio.py  test_users.py
dashboard/: index.html  package.json  tsconfig.json
dashboard/src/: App.tsx
docs/: Project_Guardian_Documentation.md  Project_Guardian_Solution_Challenge_2026.pptx  solution-challenge-ppt-content.md
mobile/: .easignore  .env.example  App.tsx  app.json  jest.config.js  metro.config.js  package.json  tsconfig.json
mobile/.storybook/: main.ts  preview.ts
mobile/android/: settings.gradle
scripts/: check-stack.sh  deploy-ai-model.sh  simulate-sos.sh  start-backend.sh
shared-schemas/: package.json  tsconfig.json
shared-schemas/python/: __init__.py  location.py  sos_event.py  user_profile.py
shared-schemas/src/: evidence.ts  index.ts  location.ts  sos-event.ts  user-profile.ts  (+1 more)
(+93 files in other folders)
