[tool.poetry]
name = "guardian-backend"
version = "0.1.0"
description = "Project Guardian FastAPI backend"
authors = []
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
firebase-admin = "^6.6.0"
twilio = "^9.4.0"
pydantic-settings = "^2.7.0"
httpx = "^0.28.0"
openai = "^1.82.0"
python-multipart = "^0.0.20"
google-generativeai = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
